--- a/.github/workflows/update-projects.yml
+++ b/.github/workflows/update-projects.yml
@@ -55,8 +55,15 @@ jobs:
           hugo
       
       - name: Commit public submodule
+        working-directory: prabhsuratsinghblog/public
         run: |
-          cd prabhsuratsinghblog/public
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          
+          # make sure we are on the correct branch (GH Pages for profile repo is master/main usually)
+          git checkout master || git checkout main
+
           git add .
           git commit -m "deploy" || echo "no changes"
           git push
+
