--- a/.github/workflows/update-projects.yml
+++ b/.github/workflows/update-projects.yml
@@ -62,10 +62,10 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
           git checkout master
-          git remote set-url origin "https://x-access-token:${GH_DEPLOY}@github.com/prabhsuratsingh/prabhsuratsingh.github.io.git"
           git add .
           git commit -m "deploy" || echo "no changes"
-          git push origin HEAD:master
+          git push "https://x-access-token:${GH_DEPLOY}@github.com/prabhsuratsingh/prabhsuratsingh.github.io.git" master
+
 
 
 
