--- a/.github/workflows/update-projects.yml
+++ b/.github/workflows/update-projects.yml
@@ -16,6 +16,9 @@ on:
 
 jobs:
   update-projects:
+    permissions:
+      contents: write
+      pages: write  
     runs-on: ubuntu-latest
 
     steps:
@@ -65,7 +68,17 @@ jobs:
           git checkout master
           git add .
           git commit -m "deploy" || echo "no changes"
-          git push "https://x-access-token:${GH_DEPLOY}@github.com/prabhsuratsingh/prabhsuratsingh.github.io.git" master
+
+          # Ensure GH_DEPLOY is actually available
+          if [ -z "$GH_DEPLOY" ]; then
+            echo "❌ GH_DEPLOY secret not set or empty"
+            exit 1
+          fi
+
+          # Use double quotes and explicit HTTPS URL
+          git remote set-url origin https://x-access-token:${GH_DEPLOY}@github.com/prabhsuratsingh/prabhsuratsingh.github.io.git
+          git push origin master
+
 
 
 
