--- a/.github/workflows/update-projects.yml
+++ b/.github/workflows/update-projects.yml
@@ -63,8 +63,8 @@ jobs:
         env:
           GH_DEPLOY: ${{ secrets.GH_DEPLOY }}
         run: |
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git config user.name "github-actions[bot]"
+          git config user.email github-actions@noreply.github.com
+          git config user.name github-actions
           git checkout master
           git add .
           git commit -m "deploy" || echo "no changes"
@@ -74,10 +74,9 @@ jobs:
             exit 1
           fi
 
-          git remote remove origin
-          git remote add origin https://x-access-token:${GH_DEPLOY}@github.com/prabhsuratsingh/prabhsuratsingh.github.io.git
+          git remote set-url origin https://x-access-token:${GH_DEPLOY}@github.com/prabhsuratsingh/prabhsuratsingh.github.io.git
 
-          git push origin master
+          git push origin HEAD:master
 
 
 
