--- a/.github/workflows/update-projects.yml
+++ b/.github/workflows/update-projects.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Generate projects.json
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GH_DEPLOY: ${{ secrets.GH_DEPLOY }}
         run: |
           python prabhsuratsinghblog/scripts/update_pinned_projects.py
 
@@ -46,10 +46,10 @@ jobs:
         run: |
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
-          git remote set-url origin https://x-access-token:${GH_DEPLOY}@github.com/prabhsuratsingh/prabhsuratsingh.github.io.git
+          git remote set-url origin https://x-access-token:${GH_DEPLOY}@github.com/prabhsuratsingh/blog.git
           git add data/projects.json
           git commit -m "update pinned projects" || echo "no changes"
-          git push origin HEAD:master
+          git push origin HEAD:main
 
 
       - name: Install Hugo
