--- a/.github/workflows/update-projects.yml
+++ b/.github/workflows/update-projects.yml
@@ -1,24 +1,19 @@
 name: Update Projects Data 
 
+on:
+  push:
+    branches:
+      - master 
+  schedule:
+    - cron: "0 0 * * 0"   # every sunday 00:00 UTC
+  workflow_dispatch: 
+
 permissions:
   contents: write
   pages: write
 
-
-on:
-  push:
-    branches:
-      - main
-      - master   # if your primary branch is master
-  schedule:
-    - cron: "0 0 * * 0"   # every sunday 00:00 UTC
-  workflow_dispatch:      # allow manual run
-
 jobs:
-  update-projects:
-    permissions:
-      contents: write
-      pages: write  
+  update-projects: 
     runs-on: ubuntu-latest
 
     steps:
@@ -44,12 +39,12 @@ jobs:
         env:
           GH_DEPLOY: ${{ secrets.GH_DEPLOY }}
         run: |
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git config user.name "github-actions[bot]"
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
           git remote set-url origin https://x-access-token:${GH_DEPLOY}@github.com/prabhsuratsingh/blog.git
           git add data/projects.json
           git commit -m "update pinned projects" || echo "no changes"
-          git push origin HEAD:main
+          git push origin HEAD:master
 
 
       - name: Install Hugo
@@ -67,8 +62,8 @@ jobs:
         env:
           GH_DEPLOY: ${{ secrets.GH_DEPLOY }}
         run: |
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git config user.name "github-actions[bot]"
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
           git checkout master
           git add .
           git commit -m "deploy" || echo "no changes"
