--- a/.github/workflows/update-projects.yml
+++ b/.github/workflows/update-projects.yml
@@ -40,12 +40,11 @@ jobs:
         env:
           GH_DEPLOY: ${{ secrets.GH_DEPLOY }}
         run: |
-          git config --global user.email "action@github.com"
-          git config --global user.name "GitHub Action"
-          git remote set-url origin https://x-access-token:${GH_DEPLOY}@github.com/prabhsuratsingh/blog.git
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
           git add data/projects.json
           git commit -m "update pinned projects" || echo "no changes"
-          git push origin HEAD:master
+          git push
 
 
       - name: Install Hugo
@@ -74,7 +73,7 @@ jobs:
             exit 1
           fi
 
-          git remote set-url origin https://x-access-token:${GH_DEPLOY}@github.com/prabhsuratsingh/prabhsuratsingh.github.io.git
+          git remote set-url origin https://${GH_DEPLOY}@github.com/prabhsuratsingh/prabhsuratsingh.github.io.git
 
           git push origin HEAD:master
 
